# docs/swagger.json
@@ -89,17 +89,17 @@
         "entity.User": {
             "type": "object",
             "properties": {
-                "claimStatus": {
-                    "type": "boolean"
-                },
                 "createdAt": {
                     "type": "string"
                 },
                 "id": {
-                    "type": "integer"
+                    "type": "string"
                 },
                 "reward": {
                     "type": "integer"
+                },
+                "updatedAt": {
+                    "type": "string"
                 },
                 "walletAddress": {
                     "type": "string"
@@ -118,7 +118,8 @@
                     "example": "0x321233"
                 },
                 "reward": {
-                    "type": "integer"
+                    "type": "integer",
+                    "example": 100
                 }
             }
         },
